maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:4: error: '(' expected but identifier found.
  {while !(getDirection() == Direction.NORTH && !estFaceMur())
         ^